--- a/start.html
+++ b/start.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
 	<title>GOLOSOVANIE</title>
 </head>
 
-<body>
+<body background: url(images/sun2.png) no-repeat;
+    background-size: 100%;>
 	<center><h1>GOLOSOVANIE</h1></center> 
 	<center><center>
 	<img src="ricardo.gif" alt="GOLOSOVANIE"
