--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
 	<title>GOLOSOVANIE</title>
 </head>
 
-<body background: url(images/sun2.png) no-repeat;
+<body background: background.jpg no-repeat;
     background-size: 100%;>
 	<center><h1>GOLOSOVANIE</h1></center> 
 	<center><center>
