--- a/start.html
+++ b/start.html
@@ -4,8 +4,7 @@
 	<title>GOLOSOVANIE</title>
 </head>
 
-<body background: background.jpg no-repeat;
-    background-size: 100%;>
+<body background=background.jpg no-repeat; background-size: 100%;>
 	<center><h1>GOLOSOVANIE</h1></center> 
 	<center><center>
 	<img src="ricardo.gif" alt="GOLOSOVANIE"
