--- a/start.html
+++ b/start.html
@@ -5,8 +5,8 @@
 </head>
 <body background=background.jpg no-repeat; background-size: 100%;>
 	<center><h1>GOLOSOVANIE</h1></center> 
-	<center><center>
-	<img src="ricardo.gif" alt="GOLOSOVANIE"
+	<center>
+	<img src="ricardo.gif" alt="GOLOSOVANIE">
 	</center>
 	<embed src="music.mp3" autostart="true" 
 	hidden="false" loop="true" width="65" height="25" align="bottom"> </embed>
