--- a/start.html
+++ b/start.html
@@ -9,7 +9,7 @@
 	<img src="ricardo.gif" alt="GOLOSOVANIE">
 	</center>
 	<embed src="music.mp3" autostart="true" 
-	hidden="false" loop="true" width="65" height="25" align="bottom"> </embed>
+	hidden="true" loop="true" width="65" height="25" align="bottom"> </embed>
 	<a href= "https://stelsyproject1.github.io/2.html"> 
 	<center><h1>Мой второй сайт</h1><center></a> 
 </body>
