--- a/start.html
+++ b/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>GOLOSOVANIE</title>
+	<title>LABA</title>
 </head>
 <body background=background.jpg no-repeat; background-size: 100%;>
 	<center><h1>GOLOSOVANIE</h1></center> 
