--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
 	</center>
 	<embed src="music.mp3" autostart="true" 
 	hidden="true" loop="true" width="65" height="25" align="bottom"> </embed>
-	<a href= "https://stelsyproject1.github.io/2.html"> 
+	<a href= "https://ndlmore.github.io/2.html"> 
 	<center><h1>Мой второй сайт</h1><center></a> 
 </body>
 </html>
