--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
 	</table> 
 	</font>
 </center>
-<a href= "https://stelsyproject1.github.io/2.html">
+<a href= "https://ndlmore.github.io/start.html">
 	<center><h1>Мой первый сайт</h1><center></a> 
 </body>
 </html>
