--- a/start.html
+++ b/start.html
@@ -4,12 +4,12 @@
 	<title>LABA</title>
 </head>
 <body background=background.jpg no-repeat; background-size: 100%;>
-	<center><h1>GOLOSOVANIE</h1></center> 
+	<center><h1>Пробный сайт</h1></center> 
 	<center>
-	<img src="ricardo.gif" alt="GOLOSOVANIE">
+	<img src="smugdance.gif" alt="Dancing">
 	</center>
-	<embed src="music.mp3" autostart="true" 
-	hidden="true" loop="true" width="65" height="25" align="bottom"> </embed>
+	<embed src="Dancing.mp3" autostart="true" 
+	hidden="true" loop="true" width="0" height="0" align="bottom"> </embed>
 	<a href= "https://ndlmore.github.io/2.html"> 
 	<center><h1>Мой второй сайт</h1><center></a> 
 </body>
