--- a/start.html
+++ b/start.html
@@ -4,7 +4,9 @@
 	<title>LABA</title>
 </head>
 <body background=background.jpg no-repeat; background-size: 100%;>
+	<font size="13" color="Pink" face="Times New Roman">
 	<center><h1>Пробный сайт</h1></center> 
+	</font>
 	<center>
 	<img src="smugdance.gif" alt="Dancing">
 	</center>
