--- a/start.html
+++ b/start.html
@@ -7,9 +7,9 @@
 	<font size="13" color="#C01DE2" face="Times New Roman">
 	<center><h1>Пробный сайт</h1></center> 
 	</font>
-	<center>
+	<center><a href= "https://ndlmore.github.io/2.html"> 
 	<img src="smugdance.gif" alt="Dancing">
-	</center>
+	</center></a>
 	<embed src="Dancing.mp3" autostart="true" 
 	hidden="true" loop="true" width="0" height="0" align="bottom"> </embed>
 	<a href= "https://ndlmore.github.io/2.html"> 
