--- a/1.html
+++ b/1.html
@@ -9,9 +9,7 @@
 	<center>
 	<img src="ricardo.gif" alt="GOLOSOVANIE">
 	</center>
-	<embed src="music.mp3" autostart="true" 
+	<embed src="GOLOSOVANIE.mp3" autostart="true" 
 	hidden="false" loop="true" width="65" height="25" align="bottom"> </embed>
-	<a href= "https://ndlmore.github.io/2.html"> 
-	<center><h1>Мой второй сайт!</h1><center></a> 
 </body>
 </html>
