--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
 		<td>Ячейка 5</td>
 		<td>Ячейка 6</td>
 		<th>Ячейка 7</th>
-		<th>Ячейка 8</th>
+		<th><a href= "https://ndlmore.github.io/start.html">Ячейка 8</a></th>
 	</tr>
 	</table> 
 	</font>
