--- a/2.html
+++ b/2.html
@@ -18,8 +18,8 @@
 		<th>Ячейка 4</th>
 	</tr>
 	<tr>
-		<td>Ячейка 5</td>
-		<td>Ячейка 6</td>
+		<th>Ячейка 5</th>
+		<th>Ячейка 6</th>
 		<th>Ячейка 7</th>
 		<th><a href= "https://ndlmore.github.io/start.html">Ячейка 8</a></th>
 	</tr>
